samples/_failures_safe/1761467117_3062d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_034c0c42.c: In function ‘main’:
./samples/SAFE/__tmp_034c0c42.c:152:17: error: expected declaration or statement at end of input
  152 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_034c0c42.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_034c0c42.c:152:17: error: expected declaration or statement at end of input
